tests/should-fail/semantics/uninitialized-var-shadow.j
globals
	integer x = 8
endglobals

function foo takes nothing returns integer
	local integer x
	return x
endfunction
